// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> by default matches with snapshot 1`] = `
<div
  className="sc-ifAKCX euPvVx"
>
  <div
    className="DayPickerInput"
  >
    <div
      className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
    >
      <input
        autoComplete="off"
        className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
        disabled={false}
        name="text"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        placeholder="dd/mm/yyyy"
        type="text"
        value=""
      />
      <span
        className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
      >
        📅
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> with custom input matches with snapshot 1`] = `
<div
  className="sc-ifAKCX euPvVx"
>
  <div
    className="DayPickerInput"
  >
    <input
      autoComplete="off"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder="dd/mm/yyyy"
      type="text"
      value=""
    />
  </div>
</div>
`;
